--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@
     background-color: #f5f5f5;
 }
 
+h1 {
+    text-align: center;
+    font-size: 40px;
+}
+
 .container .listInput {
     margin: 10px;
     box-sizing: border-box;
